--- a/app/components/pads/pads.html
+++ b/app/components/pads/pads.html
@@ -1,1 +1,31 @@
 <p>pads go here</p>
+<div class="container">
+	<div class="row">
+		<div class="col-xs-3">
+			<button type="button" class="btn btn-primary pad">pad</button>
+		</div>
+		<div class="col-xs-3">
+			<button type="button" class="btn btn-primary pad">pad</button>
+		</div>
+		<div class="col-xs-3">
+			<button type="button" class="btn btn-primary pad">pad</button>
+		</div>
+		<div class="col-xs-3">
+			<button type="button" class="btn btn-primary pad">pad</button>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-3">
+			<button type="button" class="btn btn-primary pad">pad</button>
+		</div>
+		<div class="col-xs-3">
+			<button type="button" class="btn btn-primary pad">pad</button>
+		</div>
+		<div class="col-xs-3">
+			<button type="button" class="btn btn-primary pad">pad</button>
+		</div>
+		<div class="col-xs-3">
+			<button type="button" class="btn btn-primary pad">pad</button>
+		</div>
+	</div>
+</div>
