--- a/app/components/search/search.html
+++ b/app/components/search/search.html
@@ -16,13 +16,14 @@
        <div class="input-group">
       <input type="text" class="form-control" placeholder="Search for..." ng-model="$ctrl.search">
       <span class="input-group-btn">
-        <button class="btn btn-secondary" type="button" ng-click="$ctrl.searchSound()">Go!</button>
+        <button class="btn btn-secondary" type="button" ng-click="$ctrl.searchSound()"><i class="fa fa-refresh fa-spin" ng-show="$ctrl.loadingSounds"></i> Go!</button>
       </span>
     </div>
     </div>
   </div>
   <div class="row" ng-repeat="sound in $ctrl.soundList">
    <button class="btn btn-primary" ng-click="$ctrl.loadSound(sound)"> {{sound.name}}</button>
+   <img src="{{sound.image}}" alt="{{sound.name}} waveform">
   </div>
 
 </div>
