--- a/app/components/pads/pads.scss
+++ b/app/components/pads/pads.scss
@@ -6,14 +6,23 @@ $hulkPants2: #372B53;
 $pads: #525252;
 .padsComponent {
     background-color: $hulkPants1;
+    color: white;
     .pad {
         padding: 40%;
         margin: 2% 0%;
         background-color: $pads;
+        transition: .3s;
+    }
+
+    .activePad {
+        background-color: $hulk3;
+        transition: .3s;
     }
     .padMenuButton {
         color: white;
         background-color: $pads;
+        min-width: 20px;
+        padding: 1%;
        
     }
 }
